[tool.poetry]
name = "pyspark-docker"
version = "0.1.0"
description = "PySpark in a Docker container"
authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "3.2.1"
ipython = "^8.3.0"
python-dotenv = "0.20.0"
azure-storage-blob = "12.11.0"
azure-identity = "1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
