[tool.poetry]
name = "pyspark-docker"
version = "0.1.2"
description = "PySpark in a Docker container"
authors = ["Ashley Felton <ashley.felton@dbca.wa.gov.au>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.5.0"
ipython = "^8.20.0"
python-dotenv = "1.0.1"
azure-storage-blob = "12.19.0"
azure-identity = "1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
